--- a/Resources/beast_weapons.json
+++ b/Resources/beast_weapons.json
@@ -1,3 +1,4 @@
 {
 "Bear claws":{"name":"Bear Claws","hands":2,"range":1,"attack_bonus":0,"damage_bonus":2,"add_effects":[]},
+"Bite":{"name":"Bite","hands":2,"range":1,"attack_bonus":0,"damage_bonus":1,"add_effects":[]},
 }
