--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Normalize EOL for all files that Git considers text files.
 * text=auto eol=lf
+.png filter=lfs diff=lfs merge=lfs -text
+.wav filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.tscn filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
